--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,6 +43,10 @@ img{
     height: auto;
 }
 
+img:hover{
+    opacity: 50%;
+    border: 5px solid white;
+}
 
 @media screen and (max-width: 700px){
     header h1{
